// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Page Header meta-title - renders correctly 1`] = `
<div
  class="ecl-page-header-core"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-core__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header meta-title renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-core"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-core__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header meta-title renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-core custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-core__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header meta-title-description - renders correctly 1`] = `
<div
  class="ecl-page-header-core"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-core__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header-core__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header meta-title-description renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-core"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-core__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header-core__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header meta-title-description renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-core custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-core__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header-core__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header title - renders correctly 1`] = `
<div
  class="ecl-page-header-core"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header title renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-core"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header title renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-core custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-core ecl-page-header-core__breadcrumb"
      data-ecl-breadcrumb-core="true"
    >
      <ol
        class="ecl-breadcrumb-core__container"
      >
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-core__segment"
          data-ecl-breadcrumb-core-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb-core__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-core__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-core__segment ecl-breadcrumb-core__current-page"
          data-ecl-breadcrumb-core-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header-core__title"
    >
      Page title
    </h1>
  </div>
</div>
`;
